<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/what_s_your_gender"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/gender_radio_grp_FG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp">

        <RadioButton
            android:id="@+id/male_radio_button_FG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="100dp"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <RadioButton
            android:id="@+id/female_radio_button_FG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>


    <TextView
        android:id="@+id/next_button_FG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/next_button_background"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>